# SchoolSchedule

backend/: CMakeLists.txt  conanfile.txt  db.sqlite
backend/sql/: 001_init.sql
backend/src/: App.cpp  SwaggerComponent.hpp
backend/src/controller/: ScheduleController.hpp
backend/src/db/: UserDb.hpp
backend/src/dto/: PageDto.hpp  ScheduleDto.hpp
backend/src/service/: ScheduleService.cpp  ScheduleService.hpp
frontend/: index.html  pnpm-lock.yaml
frontend/src/: App.vue
